revision-derive/tests/compile_fail/fixed_attr_on_non_int.stderr
error: `#[revision(fixed)]` requires the field type to be one of `u32`, `i32`, `u64`, `i64`, `u128`, `i128` spelled as the bare primitive name. Qualified paths (`::std::primitive::u32`, `core::primitive::u32`) and type aliases (`type MyId = u32; field: MyId`) are not seen through by the macro and so cannot carry this attribute — spell the bare name on the field or remove the attribute.
 --> tests/compile_fail/fixed_attr_on_non_int.rs:9:8
  |
9 |     name: String,
  |           ^^^^^^
